--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
   "keywords": [],
   "author": "Filipe Jorge",
   "license": "MIT",
-  "homepage": "https://github.com/flipjorge/vanillajs-workflow-lab#readme",
+  "homepage": "https://github.com/flipjorge/vanillajs-workflow-lab#readme"
 }
