--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Making a vanilla js project from scratch",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
